- Issue #10543: Fix unittest test discovery with Jython bytecode files.
