@@ -1,2 +1,5 @@
+- Issue #14664: It is now possible to use @unittest.skip{If,Unless} on a
+  test class that doesn't inherit from TestCase (i.e. a mixin).
+
 - Issue #10543: Fix unittest test discovery with Jython bytecode files.
 
